	- Allow spaces at the start of string when using perl_version_from (CHORNY)
	- all_from() now stores the filename in the 'all_from' key for later reuse (MARCEL)
	- Support code.google.com bugtracker (CHORNY)
	- If the DSL code fails, say why (ADAMK)
	- autoinstall doesn't die on CPAN-1.81 (JJORE)
	- Check 'copyrights' section for license also (CHORNY)

0.91 Thu 28 May 2009
	- Add missing dependency on Parse::CPAN::Meta

0.90 Fri 22 May 2009
	- Adding a first implementation of MYMETA

0.89 Wed 20 May 2009
	- _load_cpan now also checks for $CPAN::Config before assuming that
	  CPAN and its config are properly loaded (HDP)
	- Changes file is now TIOBE compatible (ADAMK)
	- license_from now support a TIOBE-compatible declaration (ADAMK)
	  (...under the same terms as the Perl programming language itself)

0.88 Thu 14 May 2009
	- Show what version is currently installed when deps are not new
	  enough (patch by RIBASUSHI, applied by MSTROUT)
	- Tweak _check_lock to not load CPAN when new enough -and- no env
	  vars present - otherwise we still accidentally configure the thing
	  for no good reason (MSTROUT, feeling particularly dumb)
	- Module::Install::Admin::Include now had a '=head1 NAME',
	  which should avoid problems when generating man pages.
	  Many thanks to Simon Bertrang for the patch.  (PJF, RT #45811)

0.87 Thu  7 May 2009
	- The other half of MSTROUT's changes
	- A note mentioning to bug MSTROUT if you run into problems

0.86 Sat  2 May 2009
	- Add --alldeps option to say yes to optional dependencies (MSTROUT)
	- Alter _check_lock to test the CPAN version and use
	  PERL5_CPAN_IS_RUNNING if new enough so we don't accidentally
	  configure CPAN unless it's so old we have no choice (MSTROUT)
	- Tweak the SkipInstall logic so --skipdeps bypasses everything
	  again including any loading of CPAN, no matter how old (MSTROUT)
	- Adding ./example, ./test and ./xt to the no_index list (ADAMK)
	- Removed $VERSION from the tests (ADAMK)
	- Various POD fixes (ADAMK)